# mcp-diagnostics

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  HEALTH_PROBES.md  IMPLEMENTATION_PHASE3.md  IMPLEMENTATION_SUMMARY.md  INSTALL_HTTP_SERVER.md  LICENSE  PERFORMANCE_TEST_RESULTS.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_README.md  QUICK_REFERENCE.md  README.md  TOOL_INTEGRATION_FEATURES.md  TRENDS_IMPLEMENTATION.md  cli.py  diagnostic-mcp-http.service  http_server.py  pyproject.toml  requirements.txt  schema.sql  sse_server.py
docs/: AUTHENTICATION.md  TRENDS.md
migrations/: 002_auth_tokens.sql
scripts/: force_rebuild.sh  test_probes.sh
src/diagnostic_mcp/: __init__.py  auth.py  config_export.py  env_config.py  history.py  response.py  server.py  transport_testing.py  trends.py
tests/: test_auth.py  test_health_monitor.py  test_http_auth_integration.py  test_tool_integration.py  test_trends.py
