[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnostic-mcp"
version = "1.1.0"
description = "Diagnostic MCP server: Port consistency, health checks, and configuration validation for MCP infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Diagnostic MCP Contributors"}]
dependencies = [
    "mcp>=0.9.0",
    "sentry-sdk>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "supabase>=2.0.0",
    "pyyaml>=6.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/yourusername/diagnostic-mcp"
Repository = "https://github.com/yourusername/diagnostic-mcp"
Issues = "https://github.com/yourusername/diagnostic-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
diagnostic-mcp = "diagnostic_mcp.server:main"
